samples/_failures_safe/1761442661_12f3f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f085e56.c: In function ‘main’:
./samples/SAFE/__tmp_2f085e56.c:152:17: error: expected declaration or statement at end of input
  152 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_2f085e56.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f085e56.c:152:17: error: expected declaration or statement at end of input
